--- a/website-diegocrescini/index.html
+++ b/website-diegocrescini/index.html
@@ -10,14 +10,14 @@
 </head>
 <body>
     
-    <header> <!--id="navbar" tag needs to be on for certification-->
-        <h3>Diego Crescini</h3>
+    <header> 
+        <h3>Diego Crescini</h3> 
         <nav class="navbar">
             <ul>
                 <li><a href="#welcome-section" class="uppercase">Welcome</a></li>
                 <li><a href="#projects" class="uppercase">Projects</a></li>
-                <li><a id="profile-link" href="https://github.com/diegocrescini/portfolio.git" target="_blank" class="uppercase">Github</a></li>
-                <li><a href="www.google.com" target="_blank" class="uppercase">Contact</a></li>
+                <li><a id="profile-link" href="https://github.com/diegocrescini/personalPortfolio.git" target="_blank" class="uppercase">Github</a></li>
+                <li><a href="https://www.google.com/" target="_blank" class="uppercase">Contact</a></li> <!-- used Google as placeholder site for contact page -->
             </ul>
         </nav>
     </header>
@@ -40,23 +40,23 @@
             <h2>Projects</h2>
             
             <div class="project-tile">
-                <a href="#"><img src="img/tribute.jpg" alt="Tribute page image"></a>
-                <p>Musician tribute landing page</p>
+                <a href="#"><img src="#" alt="Placeholder alt"></a>
+                <p>Placeholder project title</p>
             </div>
 
             <div class="project-tile">
-                <a href="#"><img src="img/producto.jpg" alt="Product page image"></a>
-                <p>Product page</p>
+                <a href="#"><img src="#" alt="Placeholder alt"></a>
+                <p>Placeholder project title</p>
             </div>
 
             <div class="project-tile">
-                <a href="#"><img src="img/survey.jpg" alt="Survey form page image"></a>
-                <p>Survey form</p>
+                <a href="#"><img src="#" alt="Placeholder alt"></a>
+                <p>Placeholder project title</p>
             </div>
 
             <div class="project-tile">
-                <a href="#"><img src="img/technical.jpg" alt="Technical documentation page image"></a>
-                <p>Here goes github link</p>
+                <a href="#"><img src="#" alt="Placeholder alt"></a>
+                <p>Placeholder project title</p>
             </div>
 
 
