Did some work on nav, main and restarted projects section.

--- a/website-diegocrescini/index.html
+++ b/website-diegocrescini/index.html
@@ -12,7 +12,7 @@
     
     <header> 
         <h3>Diego Crescini</h3> 
-        <nav class="navbar">
+        <nav class="navbar container">
             <ul>
                 <li><a href="#welcome-section" class="uppercase">Welcome</a></li>
                 <li><a href="#projects" class="uppercase">Projects</a></li>
@@ -22,7 +22,7 @@
         </nav>
     </header>
 
-    <main>
+    <main class="container">
         <section id="welcome-section">
             <div class="welcome-to-my-portfolio">
                 <div class="box">
@@ -38,26 +38,27 @@
 
         <section id="projects">
             <h2>Projects</h2>
-            
-            <div class="project-tile">
-                <a href="#"><img src="#" alt="Placeholder alt"></a>
-                <p>Placeholder project title</p>
-            </div>
+            <div class="projects-container">
+                <div class="project-tile">
+                    <a href="#"><img src="#" alt="Placeholder alt"></a>
+                    <p>Placeholder project title</p>
+                </div>
 
-            <div class="project-tile">
-                <a href="#"><img src="#" alt="Placeholder alt"></a>
-                <p>Placeholder project title</p>
-            </div>
+                <div class="project-tile">
+                    <a href="#"><img src="#" alt="Placeholder alt"></a>
+                    <p>Placeholder project title</p>
+                </div>
 
-            <div class="project-tile">
-                <a href="#"><img src="#" alt="Placeholder alt"></a>
-                <p>Placeholder project title</p>
-            </div>
+                <div class="project-tile">
+                    <a href="#"><img src="#" alt="Placeholder alt"></a>
+                    <p>Placeholder project title</p>
+                </div>
 
-            <div class="project-tile">
-                <a href="#"><img src="#" alt="Placeholder alt"></a>
-                <p>Placeholder project title</p>
-            </div>
+                <div class="project-tile">
+                    <a href="#"><img src="#" alt="Placeholder alt"></a>
+                    <p>Placeholder project title</p>
+                </div>
+            </div>    
 
 
 
