--- a/website-diegocrescini/index.html
+++ b/website-diegocrescini/index.html
@@ -11,12 +11,10 @@
 <body>
     
     <header> 
-        <h3>Diego Crescini</h3> 
-        <nav class="navbar container">
-            <ul>
-                <li><a href="#welcome-section" class="uppercase">Welcome</a></li>
-                <li><a href="#projects" class="uppercase">Projects</a></li>
-                <li><a id="profile-link" href="https://github.com/diegocrescini/personalPortfolio.git" target="_blank" class="uppercase">Github</a></li>
+        <nav>
+            <h1><a id="logo" href="index.html" target="_blank" class="uppercase">Diego Crescini</a></h1>
+            <ul class="contact">
+                <li><a id="profile-link" href="https://github.com/diegocrescini/personalPortfolio.git" target="_blank" class="uppercase">Git</a></li>
                 <li><a href="https://www.google.com/" target="_blank" class="uppercase">Contact</a></li> <!-- used Google as placeholder site for contact page -->
             </ul>
         </nav>
@@ -26,7 +24,7 @@
         <section id="welcome-section">
             <div class="welcome-to-my-portfolio">
                 <div class="box">
-                    <h1>Welcome to my portfolio</h1>
+                    <h2>Welcome to my portfolio</h2>
                 </div>
             </div>
             <div class="about-projects">
