Fixed links on Jaken website. Added Haken website to portfolio.

--- a/website-diegocrescini/index.html
+++ b/website-diegocrescini/index.html
@@ -50,25 +50,31 @@
             <div class="projects-container">
             
                 <div class="project-tile">
-                    <a href="#"><img src="img/producto.jpg" alt="Placeholder img"></a>
+                    <a href="../website-haken-band/index.html" target="_blank"><img src="img/haken-website.jpg" alt="Placeholder img"></a>
                     <h4 class="uppercase">Product Website</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi maxime nam quam commodi. Similique magni rem, perspiciatis, dignissimos sint ab nesciunt amet quas, voluptate voluptatum provident consequuntur suscipit vel distinctio?</p>
                 </div>
 
                 <div class="project-tile">
-                    <a href="#"><img src="img/survey.jpg" alt="Placeholder img"></a>
+                    <a href="#" target="_blank"><img src="img/producto.jpg" alt="Placeholder img"></a>
+                    <h4 class="uppercase">Product Website</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi maxime nam quam commodi. Similique magni rem, perspiciatis, dignissimos sint ab nesciunt amet quas, voluptate voluptatum provident consequuntur suscipit vel distinctio?</p>
+                </div>
+
+                <div class="project-tile">
+                    <a href="#" target="_blank"><img src="img/survey.jpg" alt="Placeholder img"></a>
                     <h4 class="uppercase">Online Survey</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi maxime nam quam commodi. Similique magni rem, perspiciatis, dignissimos sint ab nesciunt amet quas, voluptate voluptatum provident consequuntur suscipit vel distinctio?</p>
                 </div>
 
                 <div class="project-tile">
-                    <a href="#"><img src="img/technical.jpg" alt="Placeholder img"></a>
+                    <a href="#" target="_blank"><img src="img/technical.jpg" alt="Placeholder img"></a>
                     <h4 class="uppercase">Technical documentation</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi maxime nam quam commodi. Similique magni rem, perspiciatis, dignissimos sint ab nesciunt amet quas, voluptate voluptatum provident consequuntur suscipit vel distinctio?</p>
                 </div>
 
                 <div class="project-tile">
-                    <a href="#"><img src="img/tribute.jpg" alt="Placeholder img"></a>
+                    <a href="#" target="_blank"><img src="img/tribute.jpg" alt="Placeholder img"></a>
                     <h4 class="uppercase">Tribute Landing page</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi maxime nam quam commodi. Similique magni rem, perspiciatis, dignissimos sint ab nesciunt amet quas, voluptate voluptatum provident consequuntur suscipit vel distinctio?</p>
                 </div>
