--- a/website-haken-band/aquarius.html
+++ b/website-haken-band/aquarius.html
@@ -69,9 +69,9 @@
                     <a href="l+1ve.html"><img src="img/haken-l+1ve-cover.webp" alt="Haken - L+1VE Album Cover"></a>
                     <a href="l-1ve.html"><img src="img/haken-l-1ve-cover.webp" alt="Haken - L-1VE Album Cover"></a>
                     <a href="affinity.html"><img src="img/haken-affinity-cover.webp" alt="Haken - Affinity Album Cover"></a>
-                    <a href="the-mountain.html"><img src="img/haken-restoration-cover.webp" alt="Haken - Restoration Album Cover"></a>
-                    <a href="visions.html"><img src="img/haken-the-mountain-cover.webp" alt="Haken - The Mountain Album Cover"></a>
-                    <a href="aquarius.html"><img src="img/haken-visions-cover.webp" alt="Haken - Visions Album Cover"></a>
+                    <a href="restoration.html"><img src="img/haken-restoration-cover.webp" alt="Haken - Restoration Album Cover"></a>
+                    <a href="the-mountain.html"><img src="img/haken-the-mountain-cover.webp" alt="Haken - The Mountain Album Cover"></a>
+                    <a href="visions.html"><img src="img/haken-visions-cover.webp" alt="Haken - Visions Album Cover"></a>
                 </div>        
             </section>
         </article>
