Added HTML tech. documentation website to portfolio. Removed Petrucci tribute.

--- a/website-diegocrescini/index.html
+++ b/website-diegocrescini/index.html
@@ -62,23 +62,11 @@
                 </div>
 
                 <div class="project-tile">
-                    <a href="#" target="_blank"><img src="img/survey.jpg" alt="Placeholder img"></a>
-                    <h4 class="uppercase">Online Survey</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi maxime nam quam commodi. Similique magni rem, perspiciatis, dignissimos sint ab nesciunt amet quas, voluptate voluptatum provident consequuntur suscipit vel distinctio?</p>
-                </div>
-
-                <div class="project-tile">
-                    <a href="#" target="_blank"><img src="img/technical.jpg" alt="Placeholder img"></a>
+                    <a href="../website-technical-documentation/index.html" target="_blank"><img src="img/technical.jpg" alt="Technical documentation page"></a>
                     <h4 class="uppercase">Technical documentation</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi maxime nam quam commodi. Similique magni rem, perspiciatis, dignissimos sint ab nesciunt amet quas, voluptate voluptatum provident consequuntur suscipit vel distinctio?</p>
                 </div>
-
-                <div class="project-tile">
-                    <a href="#" target="_blank"><img src="img/tribute.jpg" alt="Placeholder img"></a>
-                    <h4 class="uppercase">Tribute Landing page</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi maxime nam quam commodi. Similique magni rem, perspiciatis, dignissimos sint ab nesciunt amet quas, voluptate voluptatum provident consequuntur suscipit vel distinctio?</p>
-                </div>
-            
+          
             </div>    
 
 
